--- a/glassfish.conf
+++ b/glassfish.conf
@@ -3,7 +3,7 @@
 ; supervisor.
 
 [program:glassfish]
-command=/opt/glassfish/glassfish4/bin/asadmin start-domain --verbose=true              ; the program (relative uses PATH, can take args)
+command="/opt/glassfish/glassfish4/bin/asadmin start-domain --verbose=true"              ; the program (relative uses PATH, can take args)
 ;process_name=%(program_name)s ; process_name expr (default %(program_name)s)
 ;numprocs=1                    ; number of processes copies to start (def 1)
 ;directory=/tmp                ; directory to cwd to before exec (def no cwd)
