--- a/Rserve.conf
+++ b/Rserve.conf
@@ -3,7 +3,7 @@
 ; supervisor.
 
 [program:Rserve]
-command=/usr/bin/R CMD /usr/lib64/R/library/Rserve/libs/Rserve.dbg \(args=--vanilla\)      ; the program (relative uses PATH, can take args)
+command=/usr/bin/R CMD /usr/lib64/R/library/Rserve/libs/Rserve.dbg --vanilla      ; the program (relative uses PATH, can take args)
 ;process_name=%(program_name)s ; process_name expr (default %(program_name)s)
 ;numprocs=1                    ; number of processes copies to start (def 1)
 ;directory=/tmp                ; directory to cwd to before exec (def no cwd)
